# cs2-backup

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  version.json
.github/workflows/: ci.yml  release.yml
public/: auto.cfg
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cfg_parser.rs  lib.rs  main.rs  path_detect.rs  updater.rs
src-tauri/wix/: zh-CN.wxl
src/components/: AvatarSelect.tsx  BackupCard.tsx  CfgEditor.tsx  FirstRunSetup.tsx  Icons.tsx  Layout.tsx  ThemeToggle.tsx  UpdateChecker.tsx
src/lib/: tauri-commands.ts  theme.ts
src/pages/: AutoCfgEditor.tsx  BackupList.tsx  Dashboard.tsx  Settings.tsx
