[package]
name = "cs2-backup"
version = "2.2.0"
description = "CS2 Config Backup Tool"
authors = ["CS2 Config Backup Team"]
edition = "2021"

[lib]
name = "cs2_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "6"
winreg = "0.55"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
once_cell = "1"
regex = "1"
